--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,39 @@ input select{
    float: right;
  }
 
+ .container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+/* Floating column for inputs: 75% width */
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, button {
+    width: 100%;
+    margin-top: 10px;
+  }
+}
+
+
 /* Scatter Plot  */
  /* Axis */
  .axis line {
@@ -121,44 +154,72 @@ input select{
  
  /* **********Scatter ends here************* */
    
- 
 
- /* .row {
-   margin-bottom: 10px; 
- } */
+ /* Map */
+ .background {
+  fill: none;
+  pointer-events: all;
+}
 
- .container {
-   border-radius: 5px;
-   background-color: #f2f2f2;
-   padding: 20px;
- }
- 
- .col-25 {
-   float: left;
-   width: 25%;
-   margin-top: 6px;
- }
- 
- /* Floating column for inputs: 75% width */
- .col-75 {
-   float: left;
-   width: 75%;
-   margin-top: 6px;
- }
- 
- .row:after {
-   content: "";
-   display: table;
-   clear: both;
- }
- 
- @media screen and (max-width: 600px) {
-   .col-25, .col-75, button {
-     width: 100%;
-     margin-top: 10px;
-   }
- }
+.column{
+  width: 50%;
+  float: left;
+}
 
+.vl {
+  border-left: 6px solid rgb(86, 139, 179);
+  height: 500px;
+  position: absolute;
+  left: 50%;
+  margin-left: -3px;
+  /* top: 0; */
+}
+
+ #states {
+  fill: #aaa;
+}
+
+#states .active {
+  display:none;
+}
+
+#state-borders {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 1.5px;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  pointer-events: none;
+}
+
+.county-boundary {
+  fill: gray;
+  stroke: #fff;
+  stroke-width: .5px;
+}
+
+.county-boundary:hover, .state:hover {
+  fill: orange;
+}
+
+ #tooltip_map {
+  position: absolute;
+  display: none;
+  background: #fff;
+  box-shadow: 3px 3px 3px 0px rgb(92 92 92 / 0.5);
+  border: 1px solid #ddd;
+  font-size: 12px;
+  font-weight: 500;
+  padding: 8px;
+  min-width: 160px;
+  color: #333;
+}
+.tooltip_map-title {
+  color: #000;
+  font-size: 14px;
+  font-weight: 600;
+}
+ 
 
  .source {
    font-size: 10px;
